# tts-cli

./: .gitignore  AGENTS.md  README.md  TTS-CLI  pyproject.toml
.github/workflows/: ci.yml
tests/: test_cli.py
tts_cli/: __init__.py  __main__.py  cli.py
